Fix layout bugs when changing server power buttons

--- a/homedisplay/display/static/css/custom_display.css
+++ b/homedisplay/display/static/css/custom_display.css
@@ -64,8 +64,16 @@
   font-size: 200%;
 }
 
+.server-power {
+  min-height: 83px;
+}
+
 .genelec-power {
   font-size: 200%;
+}
+
+.genelec-power {
+  min-height: 83px;
 }
 
 body {
